<?xml version="1.0"?>
<package>
  <name>roscontrol_sot</name>
  <version>0.0.4</version>
  <description>Wrapping the Stack-of-tasks framework in ros-control</description>

  <!-- Maintainer email --> 
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/roscontrol_sot</url> -->


  <!-- Author tag -->
 <author email="ostasse@laas.fr">Olivier Stasse</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_graph_bridge</build_depend>
  <build_depend>pal_hardware_interfaces</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_graph_bridge</run_depend>
  <run_depend>pal_hardware_interfaces</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/config/roscontrol_sot_controller_plugins.xml"/>
  </export>
</package>
